test/message/esm_loader_not_found_cjs_hint_bare.out
node:internal/process/esm_loader:*
    internalBinding('errors').triggerUncaughtException(
                              ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '*test*fixtures*node_modules*some_module*obj' imported from *test*fixtures*esm_loader_not_found_cjs_hint_bare.mjs
Did you mean to import some_module/obj.js?
    at new NodeError (node:internal/errors:*:*)
    at finalizeResolution (node:internal/modules/esm/resolve:*:*)
    at moduleResolve (node:internal/modules/esm/resolve:*:*)
    at Loader.defaultResolve [as _resolve] (node:internal/modules/esm/resolve:*:*)
    at Loader.resolve (node:internal/modules/esm/loader:*:*)
    at Loader.getModuleJob (node:internal/modules/esm/loader:*:*)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:*:*)
    at link (node:internal/modules/esm/module_job:*:*) {
  code: 'ERR_MODULE_NOT_FOUND'
}
